--- a/phoenixfamily_site/Gemfile
+++ b/phoenixfamily_site/Gemfile
@@ -28,6 +28,11 @@ gem 'bootstrap-sass', '3.3.4.1'
 
 group :development, :test do
   gem 'byebug', '4.0.5'
+  gem 'pry'
+  gem 'pry-byebug'
+  gem 'pry-rails'
+  gem 'awesome_print'
+  gem 'pry-stack_explorer'
   gem 'web-console', '2.1.2'
 
   # Figaro: https://github.com/laserlemon/figaro
